Changes icon navbar

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         <li>
           <a href="">Gmail</a>
         </li>
-        <li>
+        <li >
           <a href="">Imágenes</a>
         </li>
-        <li>
-          <a href="">Icon</a>
+        <li class="menu-icon">
+          <a href=""></a>
         </li>
         <li>
-          <a href="">Photo</a>
+          <a href="">
+            <img src="" alt="">
+          </a>
         </li>
       </ul>
     </nav>
