--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </li>
         <li>
           <a href="">
-            <img src="" alt="">
+            <img src="https://lh3.googleusercontent.com/ogw/ADGmqu9eauhb80MqatjdOU7omZMSG2ZL9_CMmLyjyhag=s32-c-mo" alt="Foto de perfil">
           </a>
         </li>
       </ul>
