--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
   <main role="main">
     <section class="main-logo">
-      <img src="https://img.pngio.com/google-logo-2015-png-image-purepng-free-transparent-cc0-png-google-logo-transparent-10000_3382.png" alt="">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1024px-Google_2015_logo.svg.png" alt="Logo google">
     </section>
     <section class="main-input">
       <div class="main-input-container">
